remove dependency on System.Net.Requests
this is deprecated in favor of System.Net.Http and only used in one place

default to text/plan content type when none specified in order to support this change

--- a/TinCan/project.json
+++ b/TinCan/project.json
@@ -1,7 +1,6 @@
 ﻿{
   "dependencies": {
-    "Newtonsoft.Json": "10.0.3",
-    "System.Net.Requests": "4.3.0"
+    "Newtonsoft.Json": "10.0.3"
   },
   "frameworks": {
     "netstandard1.1": {}
