--- a/TinCan/project.json
+++ b/TinCan/project.json
@@ -1,6 +1,9 @@
 ﻿{
   "dependencies": {
-    "Newtonsoft.Json": "10.0.3"
+    "Microsoft.NETCore.Portable.Compatibility": "1.0.1",
+    "NETStandard.Library": "1.6.0",
+    "Newtonsoft.Json": "9.0.1",
+    "System.Net.Requests": "4.3.0"
   },
   "frameworks": {
     "netstandard1.1": {}
